code refactoring: add controllers,new dao for Friends,status field removed